# engine-vk

./: Cargo.toml  README.md  build.rs  compile_shaders.sh
assets/: shadow_test.glb
src/: camera.rs  commands.rs  gltf.rs  main.rs  pipeline.rs  resource.rs  resources.rs  scene.rs  ui.rs  util.rs
src/asset/: material.rs  texture.rs
src/pipeline/: billboard.rs  egui.rs  grid.rs  mesh.rs  shadow_mapping.rs
src/resource/: buffer.rs  image.rs
src/scene/: billboard.rs  light.rs  mesh.rs  model.rs  util.rs  viewport.rs  world.rs
src/shaders/: billboard.vert  globals.glsl  grid.frag  grid.vert  mesh.frag  mesh.vert  pbr.frag  pbr.vert  shadow_mapping.frag  shadow_mapping.vert  unlit.frag  unlit.vert  util.glsl
src/shaders/spirv/: egui.frag.spv  mesh.frag.spv  mesh.vert.spv
