[package]
name = "engine-vk"
version = "0.1.0"
edition = "2021"
authors = ["realmayus"]
repository = "https://github.com/realmayus/engine-vk"
description = "A Vulkan based game engine"
categories = ["game-engines", "graphics"]
license = "LGPL-2"
keywords = ["vulkan", "game-engine", "graphics", "game", "engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
winit = "0.29.15"
raw-window-handle = "0.6.0"
gpu-alloc = { git = "https://github.com/realmayus/gpu-alloc.git", branch = "labels" }
gpu-alloc-ash = { git = "https://github.com/realmayus/gpu-alloc.git", branch = "labels" }
log = "0.4.21"
env_logger = "0.11.3"
bytemuck = { version = "1.15.0" , features = ["derive"]}
glam = "0.27.0"
gltf = { git = "https://github.com/realmayus/gltf.git", features = ["KHR_lights_punctual"] }
egui-winit = "0.27.2"
egui = "0.27.2"
hashbrown = "0.14.3"
rfd = "0.14.1"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
raw-window-metal = "0.4.0"

# build dependencies in release mode
[profile.dev.package."*"]
opt-level = 3
