[package]
name = "engine-vk"
version = "0.1.0"
edition = "2021"
authors = ["realmayus"]
repository = "https://github.com/realmayus/engine-vk"
description = "A Vulkan based game engine"
categories = ["game-engines", "graphics"]
license = "LGPL-2"
keywords = ["vulkan", "game-engine", "graphics", "game", "engine"]

[features]
default = ["watch"]
watch = ["notify"]


[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
winit = "0.29.15"
raw-window-handle = "0.6.0"
gpu-alloc = { git = "https://github.com/realmayus/gpu-alloc.git", branch = "labels" }
gpu-alloc-ash = { git = "https://github.com/realmayus/gpu-alloc.git", branch = "labels" }
log = "0.4.21"
env_logger = "0.11.3"
bytemuck = { version = "1.15.0" , features = ["derive"]}
glam = "0.27.0"
gltf = { git = "https://github.com/realmayus/gltf.git", features = ["KHR_lights_punctual"] }
egui-winit = "0.28.1"
egui = "0.28.1"
hashbrown = "0.14.3"
rfd = "0.14.1"
image = "0.25.2"

# optional crates
notify = { version = "6.1.1", optional = true }


[build-dependencies]
texture_packer = { version = "0.29.0" , features = ["png"]}
serde = { version = "1.0.208" , features = ["derive"]}
serde_json = "1.0.125"
image = { version = "0.25.2", features = ["png"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
raw-window-metal = "0.4.0"

# build dependencies in release mode
[profile.dev.package."*"]
opt-level = 3
